committing to push to origin

--- a/index.html
+++ b/index.html
@@ -104,33 +104,62 @@
       </section>
     </main>
 
-      <section class="insight">
-        <div class="in-hed">
-          <small>AXIM COLLABORATIVE</small>
-          <h2>
-            Our goal is to activate and accelerate innovative education
-            practices and technologies, to study and learn what works through
-            rigorous research and analysis, and convene and share our collective
-            knowledge with the wider community to achieve better student
-            outcomes.
-          </h2>
-        </div>
-        <img src="./imgs/central-diagram.png" alt="diagram">
-        <div class="focus-line">
-          <p>Project & Insights →</p>
-        </div>
-      </section>
+    <section class="insight">
+      <div class="in-hed">
+        <small>AXIM COLLABORATIVE</small>
+        <h2>
+          Our goal is to activate and accelerate innovative education practices
+          and technologies, to study and learn what works through rigorous
+          research and analysis, and convene and share our collective knowledge
+          with the wider community to achieve better student outcomes.
+        </h2>
+      </div>
+      <img src="./imgs/central-diagram.png" alt="diagram" />
+      <div class="focus-line">
+        <p>Project & Insights →</p>
+      </div>
+    </section>
 
-      <footer>
-        <div class="foot">
-            <h1>
-                Learn more about Axim Collaborative as we explore new ways to help more 
-                students succeed.
-            </h1>
-        <div class="focus-line">
-            <p>Get in touch →</p>
-          </div>
+    <div class="last-section">
+      <div class="news-article">
+        <img src="./imgs/news1.png" alt="news-article" class="news-img" />
+        <div class="news-caption">
+          <small>NEWS</small>
+          <p>Workshop on Digital Communities and Belonging in Education</p>
         </div>
-      </footer>
+      </div>
+      <div class="news-article">
+        <img src="./imgs/news2.png" alt="news-article" class="news-img" />
+        <div class="news-caption">
+          <small>NEWS</small>
+          <p>AI & Education, Inclusive Innovation for Student Success</p>
+        </div>
+      </div>
+      <div class="news-article">
+        <img src="./imgs/news3.png" alt="news-article" class="news-img" />
+        <div class="news-caption">
+          <small>NEWS</small>
+          <p>
+            Axim Collaborative Partners with UNCF and Harvard to Support
+            Development and Adoption of HBCUv
+          </p>
+        </div>
+      </div>
+      <div class="focus-line">
+        <p>News & Events →</p>
+      </div>
+    </div>
+
+    <footer>
+      <div class="foot">
+        <h1>
+          Learn more about Axim Collaborative as we explore new ways to help
+          more students succeed.
+        </h1>
+        <div class="focus-line">
+          <p>Get in touch →</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
