--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AXIM Collaborative</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
@@ -49,7 +49,7 @@
             student outcomes.
           </p>
 
-          <button>Learn more →</button>
+          <a href="#"><button>Learn more →</button></a>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
           Featuring Sal Khan, Khan Academy; Cynthia Braezeal, MIT Media Lab;
           Bridget Terry Long, Harvard Graduate School of Education
         </p>
-        <button>Learn more about the event →</button>
+        <a href="#"><button>Learn more about the event →</button></a>
         <img src="./imgs/shape-overlay.png" alt="overlap" />
       </section>
 
@@ -99,7 +99,7 @@
           technology innovation.
         </span>
         <div class="focus-line">
-          <p>Our focus →</p>
+          <p>Our focus <span>→</span></p>
         </div>
       </section>
     </main>
@@ -116,7 +116,7 @@
       </div>
       <img src="./imgs/central-diagram.png" alt="diagram" />
       <div class="focus-line">
-        <p>Project & Insights →</p>
+        <p>Project & Insights <span>→</span></p>
       </div>
     </section>
 
@@ -146,7 +146,7 @@
         </div>
       </div>
       <div class="focus-line">
-        <p>News & Events →</p>
+        <p>News & Events <span>→</span></p>
       </div>
     </div>
 
@@ -157,7 +157,7 @@
           more students succeed.
         </h1>
         <div class="focus-line">
-          <p>Get in touch →</p>
+          <p>Get in touch <span>→</span></p>
         </div>
       </div>
     </footer>
