done with mmax review and fixing responsiveness

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           technology innovation.
         </span>
         <div class="focus-line">
-          <p>Our focus <span>→</span></p>
+          <a href="#"><p>Our focus <span>→</span></p></a>
         </div>
       </section>
     </main>
@@ -116,7 +116,7 @@
       </div>
       <img src="./imgs/central-diagram.png" alt="diagram" />
       <div class="focus-line">
-        <p>Project & Insights <span>→</span></p>
+        <a href="#"><p>Project & Insights <span>→</span></p></a>
       </div>
     </section>
 
@@ -125,28 +125,28 @@
         <img src="./imgs/news1.png" alt="news-article" class="news-img" />
         <div class="news-caption">
           <small>NEWS</small>
-          <p>Workshop on Digital Communities and Belonging in Education</p>
+          <a href="#"><p>Workshop on Digital Communities and Belonging in Education</p></a>
         </div>
       </div>
       <div class="news-article">
         <img src="./imgs/news2.png" alt="news-article" class="news-img" />
         <div class="news-caption">
           <small>NEWS</small>
-          <p>AI & Education, Inclusive Innovation for Student Success</p>
+          <a href="#"><p>AI & Education, Inclusive Innovation for Student Success</p></a>
         </div>
       </div>
       <div class="news-article">
         <img src="./imgs/news3.png" alt="news-article" class="news-img" />
         <div class="news-caption">
           <small>NEWS</small>
-          <p>
+          <a href="#"><p>
             Axim Collaborative Partners with UNCF and Harvard to Support
             Development and Adoption of HBCUv
-          </p>
+          </p></a>
         </div>
       </div>
       <div class="focus-line">
-        <p>News & Events <span>→</span></p>
+        <a href="#"><p>News & Events <span>→</span></p></a>
       </div>
     </div>
 
@@ -157,7 +157,7 @@
           more students succeed.
         </h1>
         <div class="focus-line">
-          <p>Get in touch <span>→</span></p>
+          <a href="#"><p>Get in touch <span>→</span></p></a>
         </div>
       </div>
     </footer>
